# api_gateway/api/handler/candidate.go
@@ -8,6 +8,19 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary Create a new candidate
+// @Description Endpoint for creating a new candidate
+// @Election_id create_candidate
+// @Public_id create_candidate
+// @Party_id create_candidate
+// @Tags Candidate
+// @Accept json
+// @Produce json
+// @Param candidate body voting.CreateCandidateReq true "Candidate creation request payload"
+// @Success 200 {object} voting.Void "Successfully created candidate"
+// @Failure 400 {object} string "Invalid request payload"
+// @Failure 500 {object} string "Failed to create candidate"
+// @Router /candidate/create [POST]
 func (h *Handler) CreateCandidate(ctx *gin.Context) {
 	cs := voting.CreateCandidateReq{}
 
